# EtherArgus

./: .gitignore  README.md  pyproject.toml
artifacts/: XGB_FRAUD.pickle  feature_order.json  imputer.pkl  scaler.pkl
src/application/interfaces/: async_executor.py  data_converter_fn.py  done_callback.py  ether_fetcher.py  etherscan_fetcher.py  feature_extraction.py  fraud_score_classifier.py  http_client.py  ml_components.py  model_loader.py
src/config/: etherscan.py  model_registry.py
src/domain/entities/: analysis_result.py  base.py
src/domain/events/: analysis_requested_event.py  base.py
src/domain/exceptions/: exceptions.py
src/domain/value_objects/: correlation_id_vo.py  ethereum_address_vo.py  risk_level.py  risk_score_vo.py
src/infrastructure/: exceptions.py
src/infrastructure/etherscan_fetcher/: concrete_etherscan_fetcher.py  enums.py  etherscan_query_builder.py
src/infrastructure/feature_extraction/: director_of_feature_extraction.py  internal_transactions_feature_builder.py  normal_transactions_feature_builder.py  token_transfers_feature_builder.py
src/infrastructure/feature_extractor/: director_of_feature_extraction.py  enums.py  internal_transactions_feature_builder.py  normal_transactions_feature_builder.py  token_transfers_feature_builder.py
src/infrastructure/http/: clients.py
src/infrastructure/ml/: __init__.py  concrete_async_executor.py  concrete_model_loader.py  fraud_score_classifier.py  ml_components.py  model_registry.py
src/infrastructure/providers/: providers.py
tests/: conftest.py
tests/unit/domain/: fixtures.py  (+4 more)
(+16 files in other folders)
